# apt-dater

./: .gitignore  README.md  configure.ac  meson.build  meson_options.txt
.github/: meson_test_combinations.sh
.github/workflows/: ci-linux.yaml
conf/: apt-dater.xml.in  hosts.xml.in  meson.build
etc/: apt-dater.xml.in  hosts.xml.in  meson.build
lib/: hosts2xml.in  meson.build
man/: meson.build
po/: POTFILES  meson.build
schema/: meson.build
src/: adsh.c  keyfiles.c  meson.build  report.c  ui.c
